Fix main sub padding, gamefeatures responsive, no horizontal scroll on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,5 +30,6 @@
         font-weight: 200;
         font-size: 16pt;
         color: $darkbg;
+        padding:20px;
     }
 }
